# todoapp_supabase_grpc-web

./: .gitmodules  .justfile  LICENSE  README.md  tasks_table.sql
proto/: buf.gen.yaml  buf.work.yaml
proto/auth_api/auth/v1/: auth.proto
proto/todo_api/todo/v1/: task.proto  todo.proto
todo-client/: index.html  package.json  tsconfig.json  unocss.config.ts  vite.config.ts
todo-client/src/: App.tsx  index.tsx  routes.ts
todo-client/src/api/: auth_v1.ts  todo_v1.ts
todo-client/src/components/: Navbar.tsx  TaskComponent.tsx  TaskCreateModal.tsx  TaskSearchForm.tsx  TasksList.tsx
todo-client/src/context/: auth.tsx  global.tsx  todo.tsx
todo-client/src/errors/: 404.tsx
todo-client/src/pages/: about.data.ts  about.tsx  home.tsx  signin.tsx  signup.tsx  tasks.tsx
todo-server/: .env.example  .gitignore  Cargo.toml  build.rs
todo-server/src/: config.rs  lib.rs  main.rs
todo-server/src/services/: grpc_status.rs  mod.rs
todo-server/src/services/auth/: mod.rs  service.rs
todo-server/src/services/auth/proto/: auth.v1.rs  auth_v1.rs  mod.rs
todo-server/src/services/todo/: auth_middleware.rs  mod.rs  schema.rs  service.rs
todo-server/src/services/todo/proto/: mod.rs  todo.v1.rs  todo_v1.rs
todo-server/src/supabase_wrapper/: mod.rs  utils.rs
todo-server/src/supabase_wrapper/response_types/: access_token.rs  error.rs  mod.rs  user_schema.rs
